Mejoras primer entrega
Mejoras primer entrega

--- a/index.html
+++ b/index.html
@@ -1,10 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" src="../latiendaonline/src/assets/logo.JPG" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    
+    <link rel="icon" href="/src/assets/Sin fondo.png" />
     <title>La Tienda Online</title>
   </head>
   <body>
